--- a/application/assets/css/databox.css
+++ b/application/assets/css/databox.css
@@ -1,11 +1,11 @@
 .data_box_top_bar{
     width:auto;
     height:30px;
-   margin-top:5px;
-   margin-left:10px;
-   margin-right:10px;
-   white-space: nowrap;
-   overflow:hidden;
+    margin-top:5px;
+    margin-left:10px;
+    margin-right:10px;
+    white-space: nowrap;
+    overflow:hidden;
 }
 
 .group_graph_top_left{
@@ -27,15 +27,15 @@
     height:50px;
     border: 1px solid black;
     position:absolute;
-    top:0px;
-    right:0px;
+    bottom:0px;
+    left:0px;
 }
 .group_graph_bottom_right{
     width:49%;
     height:50px;
     border: 1px solid black;
     position:absolute;
-    top:0px;
+    bottom:0px;
     right:0px;
 }
 
@@ -43,7 +43,4 @@
     width:90%;
     margin-right:5px;
     height:10px;
-    position:absolute;
-    top:0px;
-    right:0px;
 }
