--- a/application/assets/css/databox.css
+++ b/application/assets/css/databox.css
@@ -13,7 +13,7 @@
     height:150px;
     border: 1px solid black;
     position:absolute;
-    top:0px;
+    top:34px;
     left:0px;
 }
 .group_graph_top_right{
@@ -21,7 +21,7 @@
     height:150px;
     border: 1px solid black;
     position:absolute;
-    top:0px;
+    top:34px;
     right:0px;
 }
 .group_graph_bottom_left{
@@ -33,8 +33,8 @@
     left:0px;
 }
 .group_graph_bottom_right{
-    width:49%;
-    height:50px;
+    width:100px;
+    height:100px;
     border: 1px solid black;
     position:absolute;
     bottom:0px;
@@ -45,4 +45,5 @@
     width:90%;
     margin-right:5px;
     height:10px;
+    border: 1px solid black;
 }
