--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -1,7 +1,8 @@
 .sex_box {
     background-color: purple;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 14px;
     display: inline-block;
-    margin-left: 2px;
+    margin-left: 5px;
+    vertical-align: middle;
 }
