--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -6,3 +6,11 @@
     margin-left: 5px;
     vertical-align: middle;
 }
+
+.sex_overlay {
+    height: 100%;
+    width: 0px;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
