--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -48,11 +48,15 @@ a{
 
 .top_right_link_outer{
     height:100%;
-    padding:5px;
+    width:auto;
     display:inline-block;
     position:relative;
     top:-12px;
     text-align: center;
+    margin-right:5px;
+    margin-left:5px;
+    padding-right:5px;
+    padding-left:5px;
 }
 
 .top_right_link_outer:hover{
