--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -12,7 +12,7 @@
     box-shadow: 0px 0px 9px #000;
 }
 
-.inside_top_panel{
+.top_links{
     width:1024px;
     height:100%;
     margin-left: auto;
