--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -12,12 +12,21 @@
     box-shadow: 0px 0px 9px #000;
 }
 
+.inside_top_panel{
+    width:1024px;
+    height:100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .top_links{
     width:1024px;
     height:100%;
     margin-left: auto;
     margin-right: auto;
 }
+
+
 
 /* -------------- Container-----------------------*/
 #container {  
