--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -32,8 +32,8 @@
 #container {  
     background: #aaa;  
     margin: auto;  
-    width: 500px;  
-    height: 90%;  
+    width: 600px;  
+    height: 700px;  
     padding-top: 30px;  
     font-family: helvetica, arial, sans-serif;  
     }  
