--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -30,7 +30,7 @@
 
 /* -------------- Container-----------------------*/
 #container {  
-    background: #aaa;  
+    background: #eee;  
     margin: auto;  
     width: 600px;  
     height: 700px;  
