--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -1,3 +1,11 @@
+/* ---------- body ----------- */
+body{
+    margin: 0px;
+}
+
+
+
+
 /* ---------- TOP PANEL ----------- */
 .top_panel{
     height: 40px;
