Edited application/assets/css/about.css via GitHub

--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -102,3 +102,12 @@ h3 {
      right: 0;  
      position: absolute;  
 }  
+
+
+.person{
+    width:100%;
+    height:50px;
+    margin-left: auto;
+    margin-right: auto;
+    background: #rrr
+}
