Edited application/assets/css/about.css via GitHub

--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -110,3 +110,17 @@ h3 {
     margin: auto;
     background: #red;
 }
+
+.pic{
+    width: 300px;
+    height:100%;
+    margin: auto;
+    background: #red;
+}
+
+.info{
+    width: 300px;
+    height:100%;
+    margin: auto;
+    background: #red;
+}
