--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -108,19 +108,19 @@ h3 {
     width:100%;
     height:50px;
     margin: auto;
-    background: #red;
+    background: #yellow;
 }
 
 .pic{
     width: 300px;
     height:100%;
     margin: auto;
-    background: #red;
+    background: #blue;
 }
 
 .info{
     width: 300px;
     height:100%;
     margin: auto;
-    background: #red;
+    background: #orange;
 }
