--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -108,7 +108,7 @@ h3 {
     width:100%;
     height:100px;
     margin: auto;
-    background: #yellow;
+    background: yellow;
     padding-top: 30px;
 }
 
@@ -116,14 +116,16 @@ h3 {
     width: 300px;
     height:100%;
     margin: auto;
-    background: #blue;
+    background: blue;
     padding-top: 30px;
+    float: right;
 }
 
 .info{
     width: 300px;
     height:100%;
     margin: auto;
-    background: #orange;
+    background: orange;
     padding-top: 30px;
+    float: right;
 }
