--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -109,7 +109,8 @@ h3 {
     width:100%;
     height:160px;
     margin: auto;
-    padding-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .pic{
@@ -117,7 +118,8 @@ h3 {
     height:100%;
     margin: auto;
     background: blue;
-    padding-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     float: right;
 }
 
@@ -126,6 +128,7 @@ h3 {
     height:100%;
     margin: auto;
     background: orange;
-    padding-top: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
     float: right;
 }
