--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -43,7 +43,15 @@ body{
     width: 800px;  
     height: 900px;  
     padding-top: 30px;  
-    font-family: helvetica, arial, sans-serif;  
+    font-family: helvetica, arial, sans-serif;
+
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-top-right: 10px;
+    border-top-right-radius: 10px;  
+
     }  
   
 h1 {  
