--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -21,8 +21,25 @@
 }
 
 .graph_bar {
-    width: 10px;
+    width: 100%;
     background-color: blue;
     border: none;
-    float: left;
+    position: absolute;
+    bottom: 15px;
+}
+
+.vert_bar_wrapper {
+    width: 40px;
+    height: 100%;
+    position: relative;
+    border: none;
+    display: inline-block
+}
+
+.graph_bar_label {
+    width: 100%;
+    height: 15px;
+    text-align: center;
+    position: absolute;
+    bottom: 0px;
 }
