--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -36,6 +36,8 @@
     border: none;
     display: inline-block;
     text-align: center;
+    margin-left: 2px;
+    margin-right: 2px;
 }
 
 .graph_bar_label {
