--- a/application/assets/css/databox.css
+++ b/application/assets/css/databox.css
@@ -34,7 +34,7 @@
 }
 
 .group_graph_bottom_middle{
-    width:49%;
+    width:300px;
     height:100px;
     border: 1px solid black;
     position:absolute;
