--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -51,7 +51,12 @@ body{
     border-top-left-radius: 10px;
     -webkit-border-top-right-radius: 10px;
     -moz-border-radius-top-right: 10px;
-    border-top-right-radius: 10px;  
+    border-top-right-radius: 10px;
+
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 0px 20px #000;
+    -moz-box-shadow: 0px 0px 20px #000;
+    box-shadow: 0px 0px 20px #000;  
 
     }  
   
