--- a/application/assets/css/databox.css
+++ b/application/assets/css/databox.css
@@ -33,13 +33,13 @@
     left:0px;
 }
 
-.group_graph_bottom_middle{
+.group_graph_bottom_left{
     width:350px;
     height:100px;
     border: 1px solid black;
     position:absolute;
-    bottom:0px;
-    left:150px;
+    bottom:3px;
+    left:3px;
 }
 .group_graph_bottom_right{
     width:100px;
