--- a/application/assets/css/databox.css
+++ b/application/assets/css/databox.css
@@ -9,19 +9,20 @@
 }
 
 .group_graph_top_left{
-    width:49%;
+    width:200px;
     height:150px;
     border: 1px solid black;
     position:absolute;
     top:34px;
-    left:0px;
+    left:10px;
+    text-align: left;
 }
 .group_graph_top_right{
-    width:350px;
+    width:310px;
     height:130px;
     position:absolute;
-    bottom:3px;
-    left:3px;
+    top:53px;
+    right:3px;
 
 }
 
@@ -29,8 +30,8 @@
     width:49%;
     height:150px;
     position:absolute;
-    top:34px;
-    right:0px;
+    bottom:-9px;
+    left:38px;
 }
 .group_graph_bottom_right{
     width:215px;
