--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -40,13 +40,31 @@
     margin-bottom: 5px;
 }
 
+.plan_page_content .left {
+    width: 50%;
+    height: 100%;
+    float: left;
+    margin-bottom: 10px;
+}
+
+.plan_page_content .right {
+    width: 50%;
+    height: 100%;
+    float: left;
+    text-align: center;
+    position: relative;
+}
+
+#plan_events_title {
+    width: 100%;
+}
+
 #plan_event_select_wrapper {
-    width: 150px;
+    width: 100%;
     height: 160px;
     float: left;
-    margin-left: 20px;
     overflow: auto;
-    margin-bottom: 10px;
+    padding: 5px;
 }
 
 #create_plan_content h3 {
@@ -69,15 +87,6 @@
     color: white;
 }
 
-#plan_events_title {
-    width: 100%;
-    height: 40px;
-}
-
 #new_event_side {
-    float: left;
-    text-align: center;
-    width: 300px;
-    height: auto;
-    margin-left: 80px;
+
 }
