--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -59,6 +59,11 @@
     text-align: center;
 }
 
+#create_event_title {
+    width: 100%;
+    text-align: center;
+}
+
 #plan_event_select_wrapper {
     width: 100%;
     height: 160px;
@@ -85,8 +90,4 @@
 .selected_event {
     background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color: white;
-}
-
-#new_event_side {
-
 }
