--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -4,7 +4,7 @@
     display: inline-block;
     margin-left: 5px;
     vertical-align: middle;
-    border: 1px solid black
+    border: 1px solid darkgray;
 }
 
 .half_marker_box {
