--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -1,8 +1,8 @@
 body {
-    background-color:#F7F7F7;
+    background-color:#f2f2f2;
 }
 fieldset {
-    border:1px solid #000000;
+    border:1px solid #555555;
     background-color: white;
     width:312px;
 }
