--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -1,3 +1,31 @@
+/* ---------- TOP PANEL ----------- */
+.top_panel{
+    height: 40px;
+    width:100%;
+    background: #333;
+    background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
+    background: -moz-linear-gradient(top,#333,#666);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333',endColorstr='#666');
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 0px 9px #000;
+    -moz-box-shadow: 0px 0px 9px #000;
+    box-shadow: 0px 0px 9px #000;
+}
+
+.inside_top_panel{
+    width:1024px;
+    height:100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.top_links{
+    width:1024px;
+    height:50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 body {
     background-color:#f2f2f2;
 }
