--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -30,7 +30,7 @@ body {
     background-color:#f2f2f2;
 }
 fieldset {
-    border:1px solid #555555;
+    border:1px solid #c2c2c2;
     background-color: white;
     width:312px;
 }
