--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -1,7 +1,8 @@
 /* ---------- TOP PANEL ----------- */
 .top_panel{
-    height: 40px;
-    width:100%;
+    height: 80px;
+    width: 100%;
+    min-width: 964px;
     background: #333;
     background: -webkit-gradient(linear,left top,left bottom,from(#333),to(#666));
     background: -moz-linear-gradient(top,#333,#666);
