--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -24,7 +24,8 @@
 
 .top_links{
     width:1024px;
-    height:50px;
+    height:100%;
+    float: right;
     margin-left: auto;
     margin-right: auto;
 }
