--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -60,11 +60,12 @@ h1 {
 }
 #container {
     width:1024px;
-    margin:auto;
+    margin-top: 50px;
+    margin: auto;
     padding:10px;
     
     background: #eee;  
-    margin: auto;  
+      
     width: 800px;  
     height: 900px;  
     padding-top: 30px;  
