--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -25,7 +25,7 @@
     height:50px;
     margin-left: auto;
     margin-right: auto;
-    
+
 }
 
 body {
@@ -33,9 +33,22 @@ body {
     margin: 0px;
 }
 fieldset {
-    border:1px solid #c2c2c2;
     background-color: white;
     width:312px;
+
+
+    /*------ borders ----*/
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-top-right: 10px;
+    border-top-right-radius: 10px;
+
+    /*--CSS3 Box Shadows--*/
+    -webkit-box-shadow: 0px 0px 5px #555;
+    -moz-box-shadow: 0px 0px 5px #555;
+    box-shadow: 0px 0px 5px #555;  
 }
 legend {
     font-family:Arial, Helvetica, sans-serif;
@@ -62,9 +75,9 @@ h1 {
     margin: auto;
     margin-top: 20px;
     padding:10px;
-    
+
     background: #eee;  
-      
+
     width: 800px;  
     height: 900px;  
     padding-top: 30px;  
@@ -81,7 +94,7 @@ h1 {
     -webkit-box-shadow: 0px 0px 5px #555;
     -moz-box-shadow: 0px 0px 5px #555;
     box-shadow: 0px 0px 5px #555;  
-  
+
 }
 
 #rightside {
