--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -83,6 +83,7 @@ h1 {
     padding-top: 30px;  
     font-family: helvetica, arial, sans-serif;
 
+    /*
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-top-left: 10px;
     border-top-left-radius: 10px;
@@ -90,10 +91,11 @@ h1 {
     -moz-border-radius-top-right: 10px;
     border-top-right-radius: 10px;
 
-    /*--CSS3 Box Shadows--*/
+    /*--CSS3 Box Shadows--
     -webkit-box-shadow: 0px 0px 5px #555;
     -moz-box-shadow: 0px 0px 5px #555;
     box-shadow: 0px 0px 5px #555;  
+    */
 
 }
 
