--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -51,7 +51,7 @@ a{
     position:relative;
     margin-left: auto;
     margin-right: auto;
-    width: 1024px;
+    width: 1052px;
     height :1000px;
     text-align: center;
     margin-top:20px;
@@ -68,6 +68,19 @@ a{
     padding-top:10px;
     border:1px solid lightgray;
     border-right:none;
+    
+    /* ------ border ----- */
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-top-right: 10px;
+    border-top-right-radius: 10px;
+
+    /*--CSS3 Box Shadows-- */
+    -webkit-box-shadow: 0px 0px 5px #555;
+    -moz-box-shadow: 0px 0px 5px #555;
+    box-shadow: 0px 0px 5px #555;  
 }
 
 .groups_wrapper{
@@ -117,8 +130,9 @@ a{
     float:left;
     width:600px;
     height: auto;
-    border-bottom: 1px solid lightgray;
     border-top: 1px solid lightgray;
+    margin-right:10px;
+    margin-left:10px;
 }
 
 .tab_bar{
@@ -268,7 +282,7 @@ a{
 .suggested_locations{
     float:left;
     width:49%;
-    height:600px;
+    height:auto;
     border-left: 1px solid lightgray;
     border-right: 1px solid lightgray;
     background-color: white;
@@ -278,9 +292,10 @@ a{
 .upcoming_events{
     float:right;
     width:49%;
-    height:600px;
+    min-height:55px;
     border-left:1px solid lightgray;
     border-right:1px solid lightgray;
+    border-bottom:1px solid lightgray;
     background-color:white;
     text-align:center;
 }
