--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -133,6 +133,21 @@ a{
     border-top: 1px solid lightgray;
     margin-right:10px;
     margin-left:10px;
+    
+    /* ------ border ----- */
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-top-right: 10px;
+    border-top-right-radius: 10px;
+
+    /*--CSS3 Box Shadows-- */
+    -webkit-box-shadow: 0px 0px 5px #555;
+    -moz-box-shadow: 0px 0px 5px #555;
+    box-shadow: 0px 0px 5px #555;  
+    
+    border-bottom:none;
 }
 
 .tab_bar{
@@ -388,6 +403,19 @@ a{
     padding-top:10px;
     border:1px solid lightgray;
     border-left:none;
+    
+    /* ------ border ----- */
+    -webkit-border-top-left-radius: 10px;
+    -moz-border-radius-top-left: 10px;
+    border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-top-right: 10px;
+    border-top-right-radius: 10px;
+
+    /*--CSS3 Box Shadows-- */
+    -webkit-box-shadow: 0px 0px 5px #555;
+    -moz-box-shadow: 0px 0px 5px #555;
+    box-shadow: 0px 0px 5px #555;  
 }
 
 .right_header{
