--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -181,7 +181,7 @@ a{
 .data_container{
     width: 100%;
     height: 100%;
-    background-color:white;
+    background-color: f9f9f9;
     display: none;
 }
 
