--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -43,11 +43,11 @@
 }
 
 .bar_today {
-    background-color: 7BC848;
+    background-color: #7BC848;
 }
 
 .bar_selected_day {
-    background-color: F9D972;
+    background-color: #F9D972;
 }
 
 .vert_bar_wrapper {
