--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -181,7 +181,7 @@ a{
 .data_container{
     width: 100%;
     height: 100%;
-    background-color: f9f9f9;
+    background-color: #f9f9f9;
     display: none;
 }
 
@@ -434,7 +434,6 @@ a{
 .plan_body{
     width:100%;
     height:auto;
-    margin-top:20px;
 }
 
 /* --------BOTTOM LINKS ---------*/
