--- a/application/assets/css/dashboard_groups.css
+++ b/application/assets/css/dashboard_groups.css
@@ -144,7 +144,7 @@
 .invite_people {
     width: 75px;
     height:38px;
-    background: -webkit-gradient(linear,left top,left bottom,from(#DF58E8),to(purple));
+    background: -webkit-gradient(linear,left top,left bottom,from(#74B1E6),to(#95CAF9));
     color: white;
     padding: 3px;
     text-align: center;
