--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -209,7 +209,7 @@ a{
     position:relative;
     right:5px;
     border:1px solid lightgray;
-    background: -webkit-gradient(linear,left top,left bottom,from(#EBBEF0),to(#C64AD4));
+    background: -webkit-gradient(linear,left top,left bottom,from(#74B1E6),to(#95CAF9));
     color:white;
 }
 
