--- a/application/assets/css/plan_conflict_modal.css
+++ b/application/assets/css/plan_conflict_modal.css
@@ -10,9 +10,7 @@
 }
 
 #plan_conflict_select {
-    width: 150px;
-    height: auto;
-    padding: 5px;
+    margin-top: 10px;
 }
 
 .selectable_event {
