--- a/application/assets/js/badger/badger.css
+++ b/application/assets/js/badger/badger.css
@@ -1,5 +1,6 @@
 .badger-outter
 	{
+            /*
 	background:#fff;
 	border:1px solid #ccc;
 	min-width: 18px;
@@ -15,6 +16,7 @@
 	top:-18px;
 	right:-18px;
 	z-index:9999;
+        */
 	}
 .badger-inner
 	{
