--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -93,7 +93,7 @@ a{
     border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
-    color: black;
+    color: #727272;
     background:-webkit-gradient(linear,left top,left bottom,from(#F3F6FF),to(#EEE));
     text-align:center;
     margin-bottom: 10px;
@@ -106,12 +106,11 @@ a{
     border:1px solid lightgray;
     height:100%;
     padding: 5px 0px 5px;
-    color: black;
+    color: #727272;
     text-align:center;
     margin-bottom: 10px;
     width:95%;
     margin-left:5px;
-    text-weight:bold;
 }
 
 .network_tab.network_active{
