--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -190,12 +190,14 @@ h1 {
 
 
 .error_message{
-    position:relative;
-    float:left;
-    width:100%;
+    position:absolute;
+    width:auto;
     height:auto;
     font-family:Arial, Helvetica, sans-serif;
+    left:950px;
     text-align:center;
+    top:57px;
+    color:#FC4343;
 }
 
 .highlight_error {
