--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -27,6 +27,8 @@
 .notification_entry.unviewed .middle{
     float: left;
     width: 210px;
+    color:black;
+    font-style:normal;
 }
 
 .notification_entry > .left {
