--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -1,34 +1,18 @@
-.marker_box {
-    width: 15px;
-    height: 16px;
-    display: inline-block;
-    margin-left: 4px;
-    vertical-align: middle;
-    border: 1px solid darkgray;
-}
-
-.half_marker_box {
-    width: 8px;
-    height: 16px;
-    float: left;
-    border: none;
-}
-
-.marker_total {
+.percent_bar_total {
     background-color: #A13D97;
 }
 
-.marker_male {
+.percent_bar_male {
     background-color: #3FA9F5;
 }
 
-.marker_female {
+.percent_bar_female {
     background-color: #E80C7A;
 }
 
-.marker_wrapper {
+.percent_bar {
     height: 100%;
-    width: 100%;
+    width: 0px;
 }
 
 .graph_bar {
