--- a/application/assets/css/login1.css
+++ b/application/assets/css/login1.css
@@ -190,14 +190,13 @@ h1 {
 
 
 .error_message{
-    position:absolute;
     width:auto;
     height:auto;
     font-family:Arial, Helvetica, sans-serif;
     left:950px;
     text-align:center;
     top:57px;
-    color:#FC4343;
+    color:purple;
 }
 
 .highlight_error {
