--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -375,6 +375,7 @@ a{
 .user_entry .remove_following{
     float:right;
     width: 75px;
+    height:20px;
     background: -webkit-gradient(linear,left top,left bottom,from(#FF7373),to(red));
     color: white;
     padding: 3px;
