--- a/application/assets/js/badger/badger.css
+++ b/application/assets/js/badger/badger.css
@@ -2,7 +2,7 @@
 {
     background:#fff;
     border:1px solid #ccc;
-    width: 16px;
+    min-width: 16px;
     height: 16px;
     border-radius: 18px;
     -moz-border-radius: 18px;
@@ -13,7 +13,7 @@
     float:left;
     position:absolute;
     top:-10px;
-    right:-9px;
+    right:-10px;
     z-index:9999;
 }
 .badger-inner
