--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -2,6 +2,9 @@
     width: 425px;
     height: auto;
     float: left;
+    border-top:1px solid gray;
+    border-right:1px solid gray;
+    border-left:1px solid gray;
 }
 
 #notifications_content > .right {
@@ -12,10 +15,7 @@
 .notification_entry {
     width: 100%;
     height: 70px;
-    border-top: 1px solid #444;
     border-bottom: 1px solid #444;
-    margin-top: 5px;
-    padding-top:5px;
     position: relative;
 }
 
