--- a/application/assets/css/dashboard_notifications.css
+++ b/application/assets/css/dashboard_notifications.css
@@ -17,6 +17,7 @@
     height: 70px;
     border-bottom: 1px solid #444;
     position: relative;
+    padding-top:10px;
 }
 
 .notification_entry.unviewed {
