--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -529,5 +529,6 @@ a{
     position:absolute;
     top:-39px;
     right:75px;
+    background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
 }
 
