--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -530,5 +530,7 @@ a{
     top:-39px;
     right:75px;
     background:-webkit-gradient(linear,left top,left bottom,from(lightYellow),to(lightgray));
+    padding:5px;
+    color:gray;
 }
 
