--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -127,7 +127,7 @@ a{
     float:left;
     height:auto;
     background-color:white;
-    border: 1px solid #aaa;
+    border: 1px solid #CCC;
     min-height: 50px;
     border-top-left-radius:10px;
 }
@@ -141,7 +141,7 @@ a{
     float:left;
     height:auto;
     background-color:white;
-    border: 1px solid #aaa;
+    border: 1px solid #CCC;
     border-top-right-radius: 10px;
     margin-left:50px;
 }
@@ -162,7 +162,7 @@ a{
 .user_entry {
     width: 100%;
     height: 55px;
-    border-top: 1px solid #aaa;
+    border-top: 1px solid #CCC;
     text-align: center;
     position: relative;
 }
@@ -201,7 +201,7 @@ a{
     width: 38%;
     float: left;
     height: auto;
-    border: 1px solid #aaa;
+    border: 1px solid #CCC;
     border-top-left-radius:10px;
     background-color: white;
 }
@@ -230,7 +230,7 @@ a{
     width: 48%;
     float: right;
     height: auto;
-    border: 1px solid #aaa;
+    border: 1px solid #CCC;
     border-top-right-radius:10px;
     background-color:white;
     padding:10px;
@@ -244,7 +244,7 @@ a{
     text-align:center;
     float:right;
     margin-top:8px;
-    border:1px solid #aaa;
+    border:1px solid #CCC;
     padding-left:3px;
     padding-right:3px;
     background: -webkit-gradient(linear,left top,left bottom,from(#EEE),to(white));
@@ -268,7 +268,7 @@ a{
 .profile_box{
     border-top-left-radius:10px;
     float:left;
-    border: 1px solid #aaa;
+    border: 1px solid #CCC;
     margin-left:auto;
     margin-right:auto;
     height:auto;
@@ -328,7 +328,7 @@ a{
     background-color:white;
     height:auto;
     width:50%;
-    border:1px solid gray;
+    border:1px solid #CCC;
     padding:10px;
     border-top-right-radius:10px;
 }
