Edited application/assets/css/home.css via GitHub

--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -1,6 +1,6 @@
 /*--------------GLOBAL ---------------- */
 body{
-    background-color: #F3F6FF;
+    background-color: #F3F3F3;
     /* make text not selectable for the UI */
     /*-webkit-user-select: none;
     cursor:default; */
