--- a/application/assets/css/home.css
+++ b/application/assets/css/home.css
@@ -73,6 +73,9 @@ a{
     -webkit-border-top-left-radius: 10px;
     -moz-border-radius-top-left: 10px;
     border-top-left-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottom-left: 10px;
+    border-bottom-left-radius: 10px;
 
     /*--CSS3 Box Shadows-- */
     -webkit-box-shadow: 0px 0px 5px #555;
