--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -90,7 +90,7 @@ a{
 .tab_container{
     width:100%;
     height:auto;
-    background-color:#F3F6FF;
+    background-color:#F3F3F3;
 }
 
 .tab{
@@ -117,7 +117,7 @@ a{
     top:10px;
     width:100%;
     height:100%;
-    background-color: #F3F6FF;
+    background-color: #F3F3F3;
     display: none;
 }
 
