--- a/application/assets/css/dashboard.css
+++ b/application/assets/css/dashboard.css
@@ -84,7 +84,7 @@ a{
     height:1000px;
     margin-left:auto;
     margin-right:auto;
-    background-color:#F3F6FF;
+    background-color:#F3F3F3;
 }
 
 .tab_container{
@@ -100,7 +100,7 @@ a{
     height:auto;
     margin-right: 10px;
     display: inline-block;
-    background-color:#F3F6FF;
+    background-color:#F3F3F3;
     text-align: center;
     padding-top:10px;
     padding-bottom:10px;
