--- a/application/assets/css/graphs.css
+++ b/application/assets/css/graphs.css
@@ -58,9 +58,8 @@
 .two_bar_right {
     position: absolute;
     top: 0px;
-    left: 0px;
+    right: 0px;
     height: 100%;
-    width: 100%;
 }
 
 .two_bar_left {
