--- a/application/assets/css/location_data.css
+++ b/application/assets/css/location_data.css
@@ -7,6 +7,9 @@
 .day_plan_graph {
     width: 300px;
     height: 150px;
+    position:absolute;
+    top:0px;
+    right:0px;
 }
 
 .place_display_info{
