--- a/application/assets/css/location_data.css
+++ b/application/assets/css/location_data.css
@@ -1,7 +1,9 @@
 .two_percent_wrapper {
     height: 25px;
     width: 200px;
-    position: relative;
+    position: absolute;
+    left:20px;
+    top:120px;
 }
 
 .day_plan_graph {
@@ -15,5 +17,5 @@
 .place_display_info{
     text-align: left;
     width:200px;
-    margin-left:15px;
+    margin-left:20px;
 }
