--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -70,10 +70,7 @@ h2 {
      position: relative;  
      width: 70%;  
   
-    -moz-box-shadow: 1px 1px 3px #292929;  
-    -webkit-box-shadow: 1px 1px 3px #292929;  
-       box-shadow: 1px 1px 3px #292929;  
-  
+ 
         /* -------------- Font -----------------------*/
         font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
 	font-size: 50px;
@@ -95,11 +92,7 @@ h4 {
      position: relative;  
      width: 70%;
      padding-top: 15px;
-     padding-bottom: 15px;  
-  
-    -moz-box-shadow: 1px 1px 3px #292929;  
-    -webkit-box-shadow: 1px 1px 3px #292929;  
-       box-shadow: 1px 1px 3px #292929;  
+     padding-bottom: 15px;   
   
     color: #454545;  
     text-shadow: 0 1px 0 white;  
@@ -109,10 +102,11 @@ h4 {
      width: 0; height: 0;  
      line-height: 0;  
      border-left: 20px solid transparent;  
-     border-top: 10px solid #c8c8c8;  
+     border-top: 10px solid #bbb;  
      top: 104%;  
      left: 0;  
-     position: absolute;  
+     position: absolute;
+     margin-top: -3px;
 }  
 
 .arrow_right {  
@@ -122,7 +116,8 @@ h4 {
      border-top: 10px solid #c8c8c8;  
      top: 104%;  
      right: 0;  
-     position: absolute;  
+     position: absolute; 
+     margin-top: -3px; 
 }  
 
 
