--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -54,9 +54,9 @@ body{
     border-top-right-radius: 10px;
 
     /*--CSS3 Box Shadows--*/
-    -webkit-box-shadow: 0px 0px 20px #000;
-    -moz-box-shadow: 0px 0px 20px #000;
-    box-shadow: 0px 0px 20px #000;  
+    -webkit-box-shadow: 0px 2px 8px #aaa;
+    -moz-box-shadow: 0px 2px 8px #aaa;
+    box-shadow: 0px 2px 8px #aaa;  
 
     }  
   
