--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -70,6 +70,7 @@ h2 {
      position: relative;  
      width: 70%;  
      background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
+     background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
   
  
         /* -------------- Font -----------------------*/
