--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -68,7 +68,11 @@ h2 {
      margin-left: -20px;  
      margin-top: 0;  
      position: relative;  
-     width: 70%;  
+     width: 70%;
+
+     -moz-border-radius: 0px 5px 5px 0px;
+     border-radius: 0px 5px 5px 0px;
+  
      background-image: -webkit-gradient(linear,left bottom,left top,color-stop(0, rgb(223,223,224)),color-stop(1, rgb(237,238,239)));
      background-image: -moz-linear-gradient(center bottom,rgb(223,223,224) 0%,rgb(237,238,239) 100%);
      background-image: -o-linear-gradient(top,rgb(237,238,239),rgb(223,223,224));
