--- a/application/assets/css/about.css
+++ b/application/assets/css/about.css
@@ -146,9 +146,9 @@ h4 {
 }
 
 .info{
-    width: 340px;
+    width: 450px;
     height:100%;
     margin: auto;
-    background: #c3c3c3;
+    background: #c3c3e8;
     float: right;
 }
