--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -76,3 +76,9 @@
 #create_plan_content h3 {
     margin-top: 0px;
 }
+
+#just_going{
+    width:auto;
+    background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
+    color:white;
+}
