--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -78,7 +78,10 @@
 }
 
 #just_going{
-    width:auto;
+    width:80pxs;
+    padding:5px;
     background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color:white;
+    margin-left:auto;
+    margin-right:auto;
 }
