--- a/application/assets/css/start_plan_modal.css
+++ b/application/assets/css/start_plan_modal.css
@@ -78,7 +78,7 @@
 }
 
 #just_going{
-    width:80pxs;
+    width:80px;
     padding:5px;
     background:-webkit-gradient(linear,left top,left bottom,from(#8AE28F),to(#22A228));
     color:white;
